# ball-defender

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
include/: Ball.hpp  BlockManager.hpp  Constants.hpp  Entity.hpp  EntityManager.hpp  Game.hpp  GameModel.hpp  GameView.hpp  Point.hpp  PointSubject.hpp  Rect.hpp  Subject.hpp  Vector.hpp
src/: Ball.cpp  BlockManager.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  GameModel.cpp  GameView.cpp  Point.cpp  PointSubject.cpp  Rect.cpp  Subject.cpp  Vector.cpp  main.cpp
